--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       max-parallel: 12
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest, flyci-macos-large-latest-m1]
         python-version: [3.8, 3.9, "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v3
@@ -63,16 +63,16 @@ jobs:
     - name: Publish sdist to pypi-test
       if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/test-') && matrix.os == 'ubuntu-latest'
       env:
-        TWINE_USERNAME: ${{ secrets.PYPITEST_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPITEST_PASSWORD }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.SHAUNS_TEST_PYPI_API_KEY }}
         TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
       run: |
         twine upload --skip-existing dist/*
     - name: Publish bdist to pypi-test
       if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/test-') && matrix.os != 'ubuntu-latest'
       env:
-        TWINE_USERNAME: ${{ secrets.PYPITEST_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPITEST_PASSWORD }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.SHAUNS_TEST_PYPI_API_KEY }}
         TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
       run: |
         twine upload --skip-existing dist/*
