--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name="samplerate"
+name="samplerate-flyci-test"
 dynamic = ["version", "readme"]
 description="Monolithic python wrapper for libsamplerate based on pybind11 and NumPy"
 authors=[
